# fraud_food_company_analysis

./: .gitignore  Apresentação de Teste de SQL .pptx  Apresentação de Teste de SQL.pptx  README.md  pyproject.toml  teste.py
analises/: analises_consolidadas.ipynb  emprestimo_conta_bio_exec.sql  emprestimo_conta_visao_geral.sql  grafico_questao1.xlsx  indice_falha_acima_90.sql  indice_falha_categoria_entregador.sql  plots_analysis.ipynb  query_questao1.sql  query_questao2.sql  query_questao3.sql  query_questao4.sql  query_questao5.1.sql  query_questao5.2.sql  query_questao5.sql  query_questao5_parte2.sql  query_question2.sql  query_question3.sql  query_question4.sql  relacao.sql  servico_mais_falho.sql  similaridade_90.sql
data/: biometry.csv  biometry_execution.csv  drivers.csv  if.db  orders.csv
src/: extract.py  load.py  main.py
